--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <body>
     <h1>Sample Webpages</h1>
     <p>My favorite sport is FOOTBALL</p>
-    <p>I like watch <br /><i>and</i> <br /> play football.<hr /></p>
+    <p>I like watch <br /><i>and</i> <br /> play football.</p><hr />
     <a href="http://www.football.ua">All news about football I read on this site</a><hr />
     <h2>The best European football tournament</h2>
     <img src="og-default.jpg" alt="uefachampionsleague"><hr />
     <video src="UEFA Champions League.mp4" width="400" height="300" controls="controls"></video><hr />
-    <audio src="uefa-g-mn-l-gi-chemp-on-v_.mp3"  controls="controls"></audio>
+    <audio src="uefa.mp3"  controls="controls"></audio>
 </body>
 </html>
